<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="group5.tcss450.uw.edu.outofgas.DetailActivity">

    <item
        android:id="@+id/comment"
        android:orderInCategory="100"
        android:title="@string/comment"
        app:showAsAction="always" />

    <item
        android:id="@+id/save"
        android:orderInCategory="100"
        android:title="@string/save"
        />

    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        />

    <item
        android:id="@+id/showEntries"
        android:orderInCategory="100"
        android:title="@string/show"
        />

    <item
        android:id="@+id/signOut"
        android:orderInCategory="100"
        android:title="@string/signout"
        app:showAsAction="never" />

</menu>
